2005-10-14  Tom Zanussi  <zanussi@us.ibm.com>

	PR 1455
	* string.c (_stp_sprintf): Restore overwritten NULL byte.
	* print.c: Change STP_PRINT_BUF_LEN to correct size.

2005-10-06  Frank Ch. Eigler  <fche@elastic.org>

	PR 1332.
	* sym.h: New file to declare explicit symbol table struct.
	* runtime.h (_stp_kallsyms_lookup_tabled): Use it if available.
	* sym.c (_stp_symbol_sprint): HAS_LOOKUP mooted.

2005-09-30  Graydon Hoare  <graydon@redhat.com>

	* loc2c-runtime.h (_put_user_asm): Fix bracket-matching.

2005-09-23  Martin Hunt  <hunt@redhat.com>

	* map.c (_stp_map_sortn):  Call _stp_map_sort()
	when n is 0.

2005-09-23  Martin Hunt  <hunt@redhat.com>

	* map.c (_stp_cmp): New comparison function for sorts.
	(_stp_swap): New swap function for bubble sort.
	(_stp_map_sortn): New function.
	(_stp_map_sort): New function.	
	(_stp_map_printn): New function.
	(_stp_map_print): Convert to a macro.	

2005-09-22  Martin Hunt  <hunt@redhat.com>

	* regs.h: PPC64 version from 
	Ananth N Mavinakayanahalli <ananth@in.ibm.com>

	* runtime.h (init_module): Only initialize _stp_kta and 
	_stp_kallsyms_lookup on i386 and x86_64. Define HAS_LOOKUP.

	* sym.c (_stp_symbol_sprint): If HAS_LOOKUP is not
	defined, just print address in hex.

	* current.c (_stp_ret_addr): Add ppc64 version.
	(_stp_sprint_regs): PPC64 version from 
	Ananth N Mavinakayanahalli <ananth@in.ibm.com>

2005-09-14  Martin Hunt  <hunt@redhat.com>

	* map.c (_stp_map_clear): New function. CLears a map but
	does not free it.

	* copy.c (__stp_strncpy_from_user): Add ppc64 support.
	(_stp_strncpy_from_user): Call access_ok().
	(_stp_string_from_user): Ditto.
	(_stp_copy_from_user): Ditto.

2005-09-12  Martin Hunt  <hunt@redhat.com>

	* io.c (ERR_STRING): Remove ansi codes.
	 (WARN_STRING): Ditto.

2005-09-12  Martin Hunt  <hunt@redhat.com>

	* arith.c (_stp_div64): Check for division by 0 or -1 first.
	This simplifies things and removes the possibility of x86_64
	trying LLONG_MIN/-1 and faulting.